# accountable-dialogue

./: AGENTS.md  CLAUDE.md  GEMINI.md  PUBLIC_BOUNDARY.md  README.md  pyproject.toml  task.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
accountable_dialogue/: __init__.py  blind_annotation.py  change_case.py  judge_calibration.py  local_pilot.py  synthetic_pilot.py
docs/contracts/: cross-model-continuity-profile-v0.md  observability-and-evidence-boundary.md
docs/design/: change-case-v0.md  synthetic-evaluation-case-v0.md
docs/philosophy/: engineering-contract.md
docs/plans/: h1-blind-semantic-annotation-pilot-v0.md  j0-small-model-judge-feasibility-v0.md  j0-transport-observability-successor-v0.md  public-surface-intake-v0.md  synthetic-local-resource-smoke-v0.2.md  synthetic-local-resource-smoke-v0.3.md  synthetic-local-resource-smoke-v0.md  synthetic-small-model-pilot-v0.md
docs/research/: accountable-agent-continuity-v0.md  behavioral-honesty-research-boundary.md  legacy-concepts-integration.md  synthetic-evaluation-protocol-v0.md
schemas/: blind-semantic-annotation-packet-v0.schema.json  change-case-v0.schema.json  judge-verdict-v0.schema.json  synthetic-evaluation-case-v0.schema.json  synthetic-judge-calibration-key-v0.schema.json  synthetic-judge-calibration-v0.schema.json
scripts/: __init__.py  run_judge_calibration.py  run_synthetic_pilot.py
tests/: test_blind_annotation.py  test_change_case.py  test_cross_model_continuity_profile.py  test_judge_calibration.py  test_repository_change_case.py  test_synthetic_pilot.py
(+46 files in other folders)
