[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "accountable-dialogue"
version = "0.1.0"
description = "A small public validator for accountable change cases."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[project.optional-dependencies]
dev = [
    "jsonschema>=4.25",
    "pytest>=8",
    "ruff>=0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
